tests/fixtures/invalid/max_float_none.py
# Cannot call max() with Float, None
x = max(1.0, None)
